# boardgamegeek_client

./: .pre-commit-config.yaml  GEMINI.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-test.yml
boardgamegeek_client/client/: client.py
boardgamegeek_client/models/: boardgame.py
tests/integration/: test_client.py  test_simple.py
tests/unit/: test_simple.py
