[project]
name = "boardgamegeek-client"
version = "0.1.0"
description = "A client package to access the boardgamegeek API."
authors = [
    {name = "Anthony Panettiere",email = "apanettiere@fastmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.3"
mypy = "^1.16.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
